<resources>
    <string name="app_name">NoTeCalles</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_PublicarReporte">Publicar reporte</string>
    <string name="menu_MisPublicaciones">Mis Publicaciones</string>
    <string name="menu_OtrasPublicaciones">Otras Publicaciones</string>
    <string name="menu_Glosario">Glosario</string>
    <string name="menu_Ayuda">Ayuda / FAQ</string>
    <string name="menu_CerrarSesion">Cerrar Sesion</string>

    <string name="calendar_icon">calendar icon</string>


</resources>