<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_publicar"
            android:icon="@drawable/img_publicar"
            android:title="@string/menu_PublicarReporte" />

        <item
            android:id="@+id/nav_mispublicaciones"
            android:icon="@drawable/img_mispubs"
            android:title="@string/menu_MisPublicaciones" />
        <item
            android:id="@+id/nav_otrasPublicaciones"
            android:icon="@drawable/img_otras"
            android:title="@string/menu_OtrasPublicaciones" />

        <item
            android:id="@+id/nav_glosario"
            android:icon="@drawable/ic_menu_glosario"
            android:title="@string/menu_Glosario" />

        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/img_maps"
            android:title="@string/menu_Ayuda" />
    </group>
</menu>