<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_mispublicaciones">

    <fragment
        android:id="@+id/nav_mispublicaciones"
        android:name="com.example.notecalles.activity.ui.mispublicaciones.MisPublicacionesFragment"
        android:label="@string/menu_MisPublicaciones"
        tools:layout="@layout/fragment_mispublicaciones" />

    <fragment
        android:id="@+id/nav_glosario"
        android:name="com.example.notecalles.activity.ui.glosario.GlosarioFragment"
        android:label="@string/menu_Glosario"
        tools:layout="@layout/fragment_glosario" >
        <action
            android:id="@+id/action_nav_glosario_to_g_LaboralActivity"
            app:destination="@id/g_LaboralActivity" />
        <action
            android:id="@+id/action_nav_glosario_to_g_CallejeroActivity"
            app:destination="@id/g_CallejeroActivity" />
        <action
            android:id="@+id/action_nav_glosario_to_g_CiberacosoActivity"
            app:destination="@id/g_CiberacosoActivity" />

    </fragment>

    <fragment
        android:id="@+id/nav_publicar"
        android:name="com.example.notecalles.activity.ui.publicar.PublicarFragment"
        android:label="@string/menu_PublicarReporte"
        tools:layout="@layout/fragment_publicar" >
        <action
            android:id="@+id/action_nav_publicar_to_ubicacionActivity"
            app:destination="@id/ubicacionActivity" />
        <action
            android:id="@+id/action_nav_publicar_to_nav_mispublicaciones"
            app:destination="@id/nav_mispublicaciones" />
    </fragment>
    <fragment
        android:id="@+id/nav_otrasPublicaciones"
        android:name="com.example.notecalles.activity.ui.otraspublicaciones.OtrasPublicacionesFragment"
        android:label="@string/menu_OtrasPublicaciones"
        tools:layout="@layout/fragment_otraspublicaciones" />
    <fragment
        android:id="@+id/FAQFragment"
        android:name="com.example.notecalles.activity.ui.FAQ.FAQFragment"
        android:label="@string/menu_Ayuda"
        tools:layout="@layout/fragment_faq" />

    <activity
        android:id="@+id/g_LaboralActivity"
        android:name="com.example.notecalles.activity.ui.glosario.g_LaboralActivity"
        android:label="activity_glaboral"
        tools:layout="@layout/activity_glaboral" />
    <activity
        android:id="@+id/g_CallejeroActivity"
        android:name="com.example.notecalles.activity.ui.glosario.g_CallejeroActivity"
        android:label="activity_gcallejero"
        tools:layout="@layout/activity_gcallejero" />
    <activity
        android:id="@+id/g_CiberacosoActivity"
        android:name="com.example.notecalles.activity.ui.glosario.g_CiberacosoActivity"
        android:label="activity_gciberacoso"
        tools:layout="@layout/activity_gciberacoso" />
    <activity
        android:id="@+id/ubicacionActivity"
        android:name="com.example.notecalles.activity.UbicacionActivity"
        android:label="activity_ubicacion"
        tools:layout="@layout/activity_ubicacion" />

</navigation>